--- a/snacks_front_web/src/main/webapp/WEB-INF/classes/log4j.properties
+++ b/snacks_front_web/src/main/webapp/WEB-INF/classes/log4j.properties
@@ -8,7 +8,7 @@ log4j.appender.stdout.layout.ConversionPattern= %d %p [%c] - <%m>%n
 
 #logfile configure
 log4j.appender.logfile=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.logfile.File=logs/editor.log
+log4j.appender.logfile.File=logs/front.log
 log4j.appender.logfile.layout=org.apache.log4j.PatternLayout
 log4j.appender.logfile.layout.ConversionPattern= %d %p [%c] - <%m>%n
 
